<resources>
    <string name="app_name">BeaconDeployment</string>
    <string name="hello_world">Hola mundo!</string>
    <string name="action_settings">Ajustes</string>
    <string name="beacon_finder">Buscador de beacons!</string>
    <string name="beacon_question">Vayamos a algun sitio!</string>
    <string name="medical_centre">Centro médico</string>
    <string name="treasure_hunting">Conoce la ETSE</string>
    <string name="find_beacons">Conoce la ETSE</string>
    <string name="select">Seleccione una de las siguientes opciones:</string>
    <string name="societies_day">Actividades ETSE</string>
    <string name="medical">WHAT THE MEDICAL CENTRE PROVIDES:
"
"  *Medical attention to all full-time students.\n"
"  *Consultations with the Doctors and Nurses are by appointment only.\n"
"  *Urgent cases will be seen as soon as possible on the day.\n"
"  *Specialist clinics including Asthma, Sexual Health, Sports Injury and Vaccination.\n"
"  *Health Promotion/Education/Smoking cessation.\n"

"FEES"
"Consultation with Doctor   -     €10"
"Consultation with Nurse    -     No charge   "
""
"LOCATION"
"We are situated in the Student Centre on the Bishopstown Campus."
" "
"OPENING HOURS"
"We are open from       "
"8.30am – 5.00pm Monday to Thursday"
"8.30am – 2.30pm on Friday"
"Also open through lunch"
" "
"CONTACT"
"Receptionist:    Marian Walsh for appointments and other queries.  Tel:  021 433 5780"
        " "
"STAFF"
"Dr Aileen Scullion - Asthma &amp; Occupational Health"
"Dr Caroline Faul - Dermatology &amp; Travel Medicine"
"Dr Aidan Kelleher - Sports Medicine &amp; Mens Health"
"Mary Gleasure - Physio"
"Conor O’Mullane - Physio"
"Joan Brosnan - Nurse"
</string>
    <string name="horarios_y_fechas_ex_menes">Horarios y fechas exámenes</string>
    <string name="servicio_de_deportes">Servicio de deportes</string>
    <string name="aula_virtual">Aula Virtual</string>
    <string name="correo_uv">Correo UV</string>
    <string name="cat_logo_trobes">Catálogo Trobes</string>
    <string name="opal">Opal</string>
    <string name="web_de_la_etse">Web de la ETSE</string>
    <string name="servicios_de_la_etse">Servicios de la ETSE</string>
    <string name="ir_a">Ir a...</string>
</resources>
