<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

     <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30pt"
        android:layout_marginRight="30pt"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/CitButton"
        android:text="@string/servicios_de_la_etse"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/logo_etse"
         tools:ignore="OnClick"
         android:drawableStart="@drawable/logo_etse" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30pt"
        android:layout_marginRight="30pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="3"
        android:id="@+id/MyButton1"
        android:text="@string/ir_a"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/place_icon"
        android:drawableStart="@drawable/place_icon" />

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30pt"
        android:layout_marginRight="30pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="3"
        android:id="@+id/MyButton4"
        android:text="@string/societies_day"
        android:background="@android:color/transparent"

        android:drawableLeft="@drawable/antenna"
        android:drawableStart="@drawable/antenna"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30pt"
        android:layout_marginRight="30pt"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/MyButton2"
        android:gravity="center"
        android:layout_weight="3"
        android:text="@string/find_beacons"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/treasure_hunt_logo"
        android:drawableStart="@drawable/treasure_hunt_logo" />

</LinearLayout>